--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Personal webpage
+<div class="gpd-box" id="i2nw">
+  <div class="gdp-row gpd-grid">
+    <div class="cell gpd-clm" id="i5lf">
+      <div class="gpd-text" id="iljs">Nicolás Ayobi Mendoza
+      </div>
+    </div>
+    <div class="cell gpd-clm">
+      <div class="gdp-row gpd-grid" id="iq3ix">
+        <div class="cell gpd-clm">
+          <a id="isnf" href="" class="gpd-link">Experience</a>
+        </div>
+        <div class="cell gpd-clm">
+          <a class="gpd-link" id="ih5f">Education</a>
+        </div>
+        <div class="cell gpd-clm">
+          <a class="gpd-link" id="ibnen">Skills</a>
+        </div>
+        <div class="cell gpd-clm">
+          <a class="gpd-link" id="i8bcy">Research</a>
+        </div>
+        <div class="cell gpd-clm">
+          <a class="gpd-link" id="i7f8l">About</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="gpd-image-block" id="ibzvv">
+  <div class="gpd-box" id="init8">
+  </div>
+  <div class="gdp-row gpd-grid" id="iiloy">
+    <div class="cell gpd-clm" id="i9e4k">
+    </div>
+    <div class="cell gpd-clm">
+      <div class="gdp-row gpd-grid" id="ir7lt">
+        <div class="cell gpd-clm">
+          <img id="isdet" src="https://cdn.grapedrop.com/ufbc881427794447aa040b793ea60c72d/0cc5335eafcc45be99ec3b00d290cc1e_foto_3_4_nicolas.jpg"/>
+        </div>
+        <div class="cell gpd-clm" id="icx7q">
+          <div class="gdp-row gpd-grid">
+            <div class="cell gpd-clm" id="in0yk">
+            </div>
+            <div class="cell gpd-clm">
+              <div class="gpd-text" id="iv5nl">Nicolás Ayobi Mendoza
+              </div>
+              <div class="gpd-text" id="itxo5">Undergraduate Biomedical Engineering Student
+                <br>Minor in Mathematical Computer Science
+                <br>​​​​​​​Minor in Bioinformatics
+                <br>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="cell gpd-clm" id="ilvhb">
+    </div>
+  </div>
+</div>
