--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                     </h3>
 
                     <div class="s-hero__content-social">
-                        <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/nicolas.ayobi"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                         <!-- a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a-->
-                        <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/nicolasayobi/?hl=es-la"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                         <!-- a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a-->
                         <!-- a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a-->
-                        <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/nicolas-ayobi-mendoza-5b78141b1/?trk=public_profile_browsemap_profile-result-card_result-card_full-click&originalSubdomain=co"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
@@ -211,7 +211,7 @@
                     Data Structures and Algorithms <br>
 					Data Structures <br>
 					Images Analysis and Processing <br>
-					Biomedical Engineering Foundations for Neurosurgery
+					Biomedical Engineering Foundations for Neurosurgery <br>
 					
 					Description....
                     </p>
