--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h1>Nicolás Ayobi Mendoza</h1>
 
                     <h3>
-                    Undergraduate <span>Biomedical Engineering student</span>, with a double minor in <span>Cumputational Mathematics</span> and <span>Bioinformatics</span>.
+                    Undergraduate <span>Biomedical Engineering student</span>, with a double minor in <span>Computational Mathematics</span> and <span>Bioinformatics</span>.
                     </h3>
 
                     <div class="s-hero__content-social">
