--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 
                 <div class="modal-popup__desc">
                     <h5>Endovis</h5>
-                    <p>Currently building on previous work of my collegues (<a href="https://arxiv.org/pdf/2007.05533v1.pdf">ISINet</a>) based on the use of deep learning to segment instruments in images of robotic assisted surgery from the <a href="https://endovis.grand-challenge.org/">Endoscopic Vision Challenge</a> dataset. We now seek to implement more recent machine learning data and to use new data to add actions identification to the former task.</p>
+                    <p>Currently building on previous work of my collegues (<a href="https://arxiv.org/pdf/2007.05533v1.pdf">ISINet</a>) based on the use of deep learning to segment instruments in images of robotic assisted surgery from the <a href="https://endovis.grand-challenge.org/">Endoscopic Vision Challenge</a> dataset.</p>
                     <!--ul class="modal-popup__cat">
                         <li>Branding</li>
                     </ul-->
