--- a/index.html
+++ b/index.html
@@ -203,8 +203,12 @@
                     </div>
 
                     <p>
+			<span class="resume-block__header-date">
+                                November 2021 - December 2021
+                            </span> ~ Coursera's Master Degree in Artificial Intelligence <br>
+			    
                     <span class="resume-block__header-date">
-                                August 2021 - Present
+                                August 2021 - December 2021
                             </span> ~ Introduction to Programming <br>
 
 					<span class="resume-block__header-date">
