--- a/index.html
+++ b/index.html
@@ -335,21 +335,21 @@
                         <div class="progress percent100"></div>
                         <strong>Python</strong>
                         </li>
+			<li>
+                        <div class="progress percent100"></div>
+                        <strong>Pytorch</strong>
+                        </li>
+			<li>
+                        <div class="progress percent100"></div>
+                        <strong>LaTeX</strong>
+                        </li>
                         <li>
-                        <div class="progress percent95"></div>
+                        <div class="progress percent90"></div>
                         <strong>Matlab</strong>
                         </li>
                         <li>
-                        <div class="progress percent95"></div>
-                        <strong>Java</strong>
-                        </li>
-						<li>
                         <div class="progress percent90"></div>
-                        <strong>Pytorch</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent85"></div>
-                        <strong>LaTeX</strong>
+                        <strong>Java</strong>
                         </li>
                         <li>
                         <div class="progress percent25"></div>
@@ -357,6 +357,10 @@
                         </li>
                         <li>
                         <div class="progress percent15"></div>
+                        <strong>SQL</strong>
+                        </li>
+			<li>
+                        <div class="progress percent10"></div>
                         <strong>SQL</strong>
                         </li>
                     </ul>
@@ -402,7 +406,7 @@
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
-                Instruments Recognition in Robot Assisted Surgery
+                Visual Recognition in Robot Assisted Surgery
                 <a href="#modal-02" class="folio-item__thumb">
                     <img src="images/Endovis.PNG" 
                          srcset="images/Endovis.PNG 1x, 
