--- a/index.html
+++ b/index.html
@@ -520,8 +520,8 @@
                         result is a suitable foundation to push the envelope further in the development 
                         of methods for Panoptic Narrative Grounding.</p>
                     <ul class="modal-popup__cat">
-                        <li>ICCV 2021</li>
-                        <li>Oral Presentation</li>
+                        <li>ICCV</li>
+                        <li>Oral</li>
                     </ul>
                 </div>
     
