--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="resume-block">
 
                     <div class="resume-block__header">
-                        <h4 class="h3">CinfonIA Research Center</h4>
+                        <h4 class="h3">Universidad de los Andes</h4>
                         <p class="resume-block__header-meta">
                             <span>Teaching Assitant in Computer Vision</span> 
                             <span class="resume-block__header-date">
