--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="s-hero__bg rellax" data-rellax-speed="-7"></div>
 
         <div class="row s-hero__content">
-			<img class="s-hero__pic" src="images/NicolasAyobiFinal.jpeg" alt="">
+			<img class="s-hero__pic" src="images/main.jpg" alt="">
             <div class="column">
 
                 <div class="s-hero__content-about">
@@ -105,9 +105,9 @@
         </div> <!-- s-hero__content -->
 
         <div class="s-hero__scroll">
-            <a href="#about" class="s-hero__scroll-link smoothscroll">
+            <a href="#about" class="s-hero__scroll-link smoothscroll" target="_blank" rel="noopener noreferrer">
                 <span class="scroll-arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);"><path d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"></path></svg>
                 </span>
                 <span class="scroll-text">Scroll Down</span>
             </a>
@@ -122,12 +122,13 @@
 
         <div class="row">
             <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/Me4.jpg" alt="">
+                <img class="s-about__pic" src="images/second.jpg" alt="">
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
-                <p>
-                I am a first-year biomedical engineering master's student. I just finished my Bachelor's studies in biomédical engineering as well, with a double minor in Bioinformatics and Computational Mathematics. Additionally, I work as a graduate research assistant at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> of the University of los Andes in several projects focused on computer vision. My goal is to achieve a Ph.D. in the future to develop my research on machine vision applications in medicine fully. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future.
+                <p style="text-align: justify;">
+                    I am a master's student in biomedical engineering at the <a href="https://uniandes.edu.co/" target="_blank" rel="noopener noreferrer">University of los Andes</a> in Bogota, Colombia. I work as a graduate research assistant in computer vision at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a>, under the suppervision of <a href="https://scholar.google.com/citations?user=k0nZO90AAAAJ&hl=es" target="_blank" rel="noopener noreferrer">Pablo Arbeláez</a>. A year ago, I finished my Bachelor's studies in biomédical engineering, with a double minor in Bioinformatics and Computational Mathematics. For the last three years I've worked in several research projects focused on computer vision and artificial inteligence. My goal is to achieve a Ph.D. in the future to develop my research on machine vision applications in medicine fully. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future.
+                <!-- I am a first-year biomedical engineering master's student. I just finished my Bachelor's studies in biomédical engineering as well, with a double minor in Bioinformatics and Computational Mathematics. Additionally, I work as a graduate research assistant at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> of the University of los Andes in several projects focused on computer vision. My goal is to achieve a Ph.D. in the future to develop my research on machine vision applications in medicine fully. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future. -->
 				<!--I am a senior year biomedical engineering student at the Universidad de los Andes
 				in Bogotá, Colombia. I've already finished a minor in Bioinformatics and I'm currently finishing 
                 a second minor in Computational Mathematics. My main interests are medical imaging, computer vision, deep 
@@ -152,8 +153,8 @@
                         
                     </div>
                     <div class="column w-1000-stack">
-                        <a href="Compact_CV.pdf" class="btn btn--download">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
+                        <a href="Compact_CV.pdf" class="btn btn--download" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
                             Download CV
                         </a>
                     </div>
