--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p style="text-align: justify;">
-                    I am a master's student in biomedical engineering at the <a href="https://uniandes.edu.co/" target="_blank" rel="noopener noreferrer">University of los Andes</a> in Bogota, Colombia. I work as a graduate research assistant in computer vision at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a>, under the suppervision of <a href="https://scholar.google.com/citations?user=k0nZO90AAAAJ&hl=es" target="_blank" rel="noopener noreferrer">Pablo Arbeláez</a>. A year ago, I finished my Bachelor's studies in biomédical engineering, with a double minor in Bioinformatics and Computational Mathematics. For the last three years I've worked in several research projects focused on computer vision and artificial inteligence. My goal is to achieve a Ph.D. in the future to develop my research on machine vision applications in medicine fully. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future.
+                    <!-- I am a master's student in biomedical engineering at the <a href="https://uniandes.edu.co/" target="_blank" rel="noopener noreferrer">University of los Andes</a> in Bogota, Colombia. I work as a graduate research assistant in computer vision at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> of my university under the supervision of <a href="https://scholar.google.com/citations?user=k0nZO90AAAAJ&hl=es" target="_blank" rel="noopener noreferrer">Pablo Arbeláez</a>. A year ago, I finished my Bachelor's studies in biomédical engineering, with a double minor in Bioinformatics and Computational Mathematics. I've worked for th elast three years on several research projects focused on artificial intelligence for both medical and natural images.  My main interests are biomedical image analysis, vision & language and video analysis. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future. -->
+                    I am a master's student in biomedical engineering at the <a href="https://uniandes.edu.co/" target="_blank" rel="noopener noreferrer">University of los Andes</a> in Bogota, Colombia. I received my Bachelor's degree in biomédical engineering with a double minor in Bioinformatics and Computational Mathematics. Additionally, I work as a graduate research assistant in computer vision at my university's <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> under <a href="https://scholar.google.com/citations?user=k0nZO90AAAAJ&hl=es" target="_blank" rel="noopener noreferrer">Pablo Arbeláez's</a> supervision. I've worked on several research projects focused on deep learning and computer vision for medical and natural images. My main research interests are video analysis, biomedical image processing, and vision & language. 
                 <!-- I am a first-year biomedical engineering master's student. I just finished my Bachelor's studies in biomédical engineering as well, with a double minor in Bioinformatics and Computational Mathematics. Additionally, I work as a graduate research assistant at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> of the University of los Andes in several projects focused on computer vision. My goal is to achieve a Ph.D. in the future to develop my research on machine vision applications in medicine fully. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future. -->
 				<!--I am a senior year biomedical engineering student at the Universidad de los Andes
 				in Bogotá, Colombia. I've already finished a minor in Bioinformatics and I'm currently finishing 
@@ -170,8 +171,12 @@
 
         <div style="margin-bottom: -7%;" class="row s-portfolio__header">
             <div class="column large-12">
-                <h3><!--/NOTHING READY AFTER THIS PART/-->
-                Publications</h3>
+                <h3>
+                    Publications
+                </h3>
+                <p>
+                    
+                </p>
             </div>
         </div>
 
@@ -191,7 +196,7 @@
             <div class="column2">
                 <p style="text-align: justify;"> 
                     <strong>Panoptic Narrative Grounding.</strong> Cristina González, <u>Nicolás Ayobi</u>, Isabela Hernández,
-                    José Hernández, Jordi Pont-Tuset, Pablo Arbeláez. <em>Oral Presentation in the International Conference of Computer Vision (ICCV) 2021.</em><br>
+                    José Hernández, Jordi Pont-Tuset, Pablo Arbeláez. <em>Oral Presentation at the International Conference of Computer Vision (ICCV) 2021.</em><br>
                     
                     <a href="https://bcv-uniandes.github.io/panoptic-narrative-grounding/" target="_blank" rel="noopener noreferrer">[Project Page]</a>
                     <a href="https://arxiv.org/abs/2109.04988" target="_blank" rel="noopener noreferrer">[Paper]</a>
