--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p style="text-align: justify;">
-                    <!-- I am a master's student in biomedical engineering at the <a href="https://uniandes.edu.co/" target="_blank" rel="noopener noreferrer">University of los Andes</a> in Bogota, Colombia. I work as a graduate research assistant in computer vision at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> of my university under the supervision of <a href="https://scholar.google.com/citations?user=k0nZO90AAAAJ&hl=es" target="_blank" rel="noopener noreferrer">Pablo Arbeláez</a>. A year ago, I finished my Bachelor's studies in biomédical engineering, with a double minor in Bioinformatics and Computational Mathematics. I've worked for th elast three years on several research projects focused on artificial intelligence for both medical and natural images.  My main interests are biomedical image analysis, vision & language and video analysis. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future. -->
                     I am a master's student in biomedical engineering at the <a href="https://uniandes.edu.co/" target="_blank" rel="noopener noreferrer">University of los Andes</a> in Bogota, Colombia. I received my Bachelor's degree in biomédical engineering with a double minor in Bioinformatics and Computational Mathematics. Additionally, I work as a graduate research assistant in computer vision at my university's <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> under <a href="https://scholar.google.com/citations?user=k0nZO90AAAAJ&hl=es" target="_blank" rel="noopener noreferrer">Pablo Arbeláez's</a> supervision. I've worked on several research projects focused on deep learning and computer vision for medical and natural images. My main research interests are video analysis, biomedical image processing, and vision & language. 
                 <!-- I am a first-year biomedical engineering master's student. I just finished my Bachelor's studies in biomédical engineering as well, with a double minor in Bioinformatics and Computational Mathematics. Additionally, I work as a graduate research assistant at the <a href="https://cinfonia.uniandes.edu.co/" target="_blank" rel="noopener noreferrer">CinfonIA research center</a> of the University of los Andes in several projects focused on computer vision. My goal is to achieve a Ph.D. in the future to develop my research on machine vision applications in medicine fully. I aim to someday work in an extensive research center of applied artificial intelligence for biomedical image analysis in the far future. -->
 				<!--I am a senior year biomedical engineering student at the Universidad de los Andes
@@ -180,7 +179,7 @@
             </div>
         </div>
 
-        <div style="margin-bottom: -7%;" class="row block-large-1-4 block-medium-1-1 block-tab-1-1 block-500-stack folio-list">
+        <div style="margin-bottom: -45pt;" class="row block-large-1-4 block-medium-1-1 block-tab-1-1 block-500-stack folio-list">
 
             <div class="column folio-item">
                 <a href="#modal-01" class="folio-item__thumb">
@@ -242,7 +241,7 @@
             
         </div>
 
-        <div style="margin-bottom: -7%;" class="row block-large-1-4 block-medium-1-1 block-tab-1-1 block-500-stack folio-list">
+        <div style="margin-bottom: -45pt;" class="row block-large-1-4 block-medium-1-1 block-tab-1-1 block-500-stack folio-list">
 
             <div class="column folio-item">
                 <a href="#modal-02" class="folio-item__thumb">
@@ -284,7 +283,7 @@
             </div> <!-- end modal -->
         </div>
 
-        <div style="margin-bottom: -7%;" class="row block-large-1-4 block-medium-1-1 block-tab-1-1 block-500-stack folio-list">
+        <div style="margin-bottom: -45pt;" class="row block-large-1-4 block-medium-1-1 block-tab-1-1 block-500-stack folio-list">
 
             <div class="column folio-item">
                 <a href="#modal-03" class="folio-item__thumb">
