--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="column2">
                 <p> 
                     <strong>MuST: Multi-Scale Transformers for Surgical Phase Recognition.</strong> <br>
-                    <u>Alejandra Pérez, Santiago Rodríguez, Nicolás Ayobi, Nicolás Aparicio, Eugénie Dessevres, and Pablo Arbeláez<br>
+                    Alejandra Pérez, Santiago Rodríguez, <u>Nicolás Ayobi</u>, Nicolás Aparicio, Eugénie Dessevres, and Pablo Arbeláez<br>
                     <em>Poster at the International Conference on Medican Image Computing and Computer Assisted Interventions (MICCAI) 2024.</em><br>
                     
                     <a href="https://arxiv.org/abs/2407.17361" target="_blank" rel="noopener noreferrer">[PDF]</a>
