--- a/index.html
+++ b/index.html
@@ -75,17 +75,13 @@
             <div class="column">
 
                 <div class="s-hero__content-about">
-					<!--div-->
-		
-					<!--/div-->
 
                     <h1>Nicolás Ayobi</h1>
 
                     <h3 style="text-align: center">
                         <span>AI Engineer</span><br>
                         <span>Research Assistant in Computer Vision</span> at CinfonIA <br>
-                        <span>M.Sc. in Biomedical Engineering</span><br>
-                        <span>B.Sc. in Biomedical Engineering</span><!-- with a double minor in <span>Computational Mathematics</span> and in <span>Bioinformatics</span>-->
+                        <span>M.Sc., B.Sc in Biomedical Engineering</span><!-- with a double minor in <span>Computational Mathematics</span> and in <span>Bioinformatics</span>-->
                     </h3>
 
                     <div class="s-hero__content-social">
@@ -154,7 +150,7 @@
                         
                     </div>
                     <div class="column w-1000-stack">
-                        <a href="Compact_CV.pdf" class="btn btn--download" target="_blank" rel="noopener noreferrer">
+                        <a href="docs/Nicolas_Ayobi_CV.pdf" class="btn btn--download" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
                             Download CV
                         </a>
